--- a/frontend/templates/includes/django-datta-able/sidebar.html
+++ b/frontend/templates/includes/django-datta-able/sidebar.html
@@ -1,4 +1,4 @@
-
+{% load static %}
     <nav class="pcoded-navbar">
         <div class="navbar-wrapper">
             <div class="navbar-brand header-logo">
