--- a/frontend/templates/includes/django-material-kit/footer.html
+++ b/frontend/templates/includes/django-material-kit/footer.html
@@ -1,11 +1,11 @@
-
+{% load static %}
   <footer class="footer pt-5 mt-5">
     <div class="container">
       <div class=" row">
         <div class="col-md-3 mb-4 ms-auto">
           <div>
             <a href="https://appseed.us/product/django-material-kit">
-              <img src="/static/assets/img/django-material-kit/logo-ct-dark.png" class="mb-3 footer-logo" alt="main_logo">
+              <img src="{% static 'assets/img/django-material-kit/logo-ct-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
             </a>
             <h6 class="font-weight-bolder mb-4">Material Kit 2</h6>
           </div>
