--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -1,3 +1,4 @@
+{% load static %}
   <!-- Navbar Transparent -->
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent ">
     <div class="container">
@@ -20,8 +21,8 @@
               <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages8" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="material-icons opacity-6 me-2 text-md">dashboard</i>
                 Pages
-                <img src="/static/assets/img/down-arrow-white.svg" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
-                <img src="/static/assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
+                <img src="{% static 'assets/img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
+                <img src="{% static 'assets/img/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
               </a>
               <div class="dropdown-menu dropdown-menu-animation ms-n3 dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages8">
                 <div class="d-none d-lg-block">
@@ -70,8 +71,8 @@
               <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuBlocks" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="material-icons opacity-6 me-2 text-md">view_day</i>
                 Sections
-                <img src="/static/assets/img/down-arrow-white.svg" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
-                <img src="/static/assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
+                <img src="{% static 'assets/img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
+                <img src="{% static 'assets/img/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
               </a>
               <ul class="dropdown-menu dropdown-menu-animation dropdown-menu-end dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
                 <div class="d-none d-lg-block">
@@ -82,7 +83,7 @@
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Page Sections</h6>
                           <span class="text-sm">See all sections</span>
                         </div>
-                        <img src="/static/assets/img/down-arrow.svg" alt="down-arrow" class="arrow">
+                        <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
                     <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -101,7 +102,7 @@
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Navigation</h6>
                           <span class="text-sm">See all navigations</span>
                         </div>
-                        <img src="/static/assets/img/down-arrow.svg" alt="down-arrow" class="arrow">
+                        <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
                     <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -123,7 +124,7 @@
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Input Areas</h6>
                           <span class="text-sm">See all input areas</span>
                         </div>
-                        <img src="/static/assets/img/down-arrow.svg" alt="down-arrow" class="arrow">
+                        <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
                     <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -142,7 +143,7 @@
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Attention Catchers</h6>
                           <span class="text-sm">See all examples</span>
                         </div>
-                        <img src="/static/assets/img/down-arrow.svg" alt="down-arrow" class="arrow">
+                        <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
                     <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -164,7 +165,7 @@
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Elements</h6>
                           <span class="text-sm">See all elements</span>
                         </div>
-                        <img src="/static/assets/img/down-arrow.svg" alt="down-arrow" class="arrow">
+                        <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
                     <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -312,8 +313,8 @@
             <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuDocs" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="material-icons opacity-6 me-2 text-md">article</i>
               Help
-              <img src="/static/assets/img/down-arrow-white.svg" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
-              <img src="/static/assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
+              <img src="{% static 'assets/img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
+              <img src="{% static 'assets/img/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
             </a>
             <ul class="dropdown-menu dropdown-menu-animation dropdown-menu-end dropdown-md dropdown-md-responsive mt-0 mt-lg-3 p-3 border-radius-lg" aria-labelledby="dropdownMenuDocs">
               <div class="d-none d-lg-block">
