--- a/frontend/templates/includes/django-material-kit/scripts.html
+++ b/frontend/templates/includes/django-material-kit/scripts.html
@@ -7,8 +7,8 @@
 <!--  Plugin for TypedJS, full documentation here: https://github.com/inorganik/CountUp.js -->
 <script src="{% static 'assets/js/django-material-kit/plugins/countup.min.js' %}"></script>
 <script src="{% static 'assets/js/django-material-kit/plugins/choices.min.js' %}"></script>
-<script src="/static/assets/js/django-material-kit/plugins/prism.min.js"></script>
-<script src="/static/assets/js/django-material-kit/plugins/highlight.min.js"></script>
+<script src="{% static 'assets/js/django-material-kit/plugins/prism.min.js' %}"></script>
+<script src="{% static 'assets/js/django-material-kit/plugins/highlight.min.js' %}"></script>
 
 <!--  Plugin for Parallax, full documentation here: https://github.com/dixonandmoe/rellax -->
 <script src="{% static 'assets/js/django-material-kit/plugins/rellax.min.js' %}"></script>
