--- a/frontend/templates/home/django-datta-able/index.html
+++ b/frontend/templates/home/django-datta-able/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends "layouts/django-datta-able/base.html" %}
 
 {% block title %} Dashboard {% endblock %} 
@@ -88,7 +89,7 @@
                                         <table class="table table-hover">
                                             <tbody>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user"></td>
+                                                    <td><img class="rounded-circle" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user"></td>
                                                     <td>
                                                         <h6 class="mb-1">Isabella Christensen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply…</p>
@@ -99,7 +100,7 @@
                                                     <td><a href="#!" class="label theme-bg2 text-white f-12">Reject</a><a href="#!" class="label theme-bg text-white f-12">Approve</a></td>
                                                 </tr>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user"></td>
+                                                    <td><img class="rounded-circle" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user"></td>
                                                     <td>
                                                         <h6 class="mb-1">Mathilde Andersen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply text of…</p>
@@ -110,7 +111,7 @@
                                                     <td><a href="#!" class="label theme-bg2 text-white f-12">Reject</a><a href="#!" class="label theme-bg text-white f-12">Approve</a></td>
                                                 </tr>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-3.jpg" alt="activity-user"></td>
+                                                    <td><img class="rounded-circle" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-3.jpg" alt="activity-user"></td>
                                                     <td>
                                                         <h6 class="mb-1">Karla Sorensen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply…</p>
@@ -121,7 +122,7 @@
                                                     <td><a href="#!" class="label theme-bg2 text-white f-12">Reject</a><a href="#!" class="label theme-bg text-white f-12">Approve</a></td>
                                                 </tr>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user"></td>
+                                                    <td><img class="rounded-circle" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user"></td>
                                                     <td>
                                                         <h6 class="mb-1">Ida Jorgensen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply text of…</p>
@@ -132,7 +133,7 @@
                                                     <td><a href="#!" class="label theme-bg2 text-white f-12">Reject</a><a href="#!" class="label theme-bg text-white f-12">Approve</a></td>
                                                 </tr>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user"></td>
+                                                    <td><img class="rounded-circle" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user"></td>
                                                     <td>
                                                         <h6 class="mb-1">Albert Andersen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply dummy…</p>
@@ -371,7 +372,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -387,7 +388,7 @@
 
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user">Albert Andersen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user">Albert Andersen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Jumps over the lazy</h6>
@@ -403,7 +404,7 @@
 
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-3.jpg" alt="activity-user">Silje Larsen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-3.jpg" alt="activity-user">Silje Larsen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Dog the quick brown</h6>
@@ -418,7 +419,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -449,7 +450,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user">Albert Andersen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user">Albert Andersen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Jumps over the lazy</h6>
@@ -464,7 +465,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -479,7 +480,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -494,7 +495,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-3.jpg" alt="activity-user">Silje Larsen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-3.jpg" alt="activity-user">Silje Larsen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Dog the quick brown</h6>
@@ -525,7 +526,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-3.jpg" alt="activity-user">Silje Larsen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-3.jpg" alt="activity-user">Silje Larsen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Dog the quick brown</h6>
@@ -540,7 +541,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -555,7 +556,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user">Albert Andersen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-2.jpg" alt="activity-user">Albert Andersen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Jumps over the lazy</h6>
@@ -570,7 +571,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="{% static 'assets/img/django-datta-able/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
