--- a/frontend/templates/home/django-datta-able/maps-google.html
+++ b/frontend/templates/home/django-datta-able/maps-google.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends "layouts/django-datta-able/base.html" %}
 
 {% block title %} Google Maps {% endblock %} 
@@ -175,7 +176,7 @@
 
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
-    <script src="/static/assets/plugins/google-maps/js/gmaps.js"></script>
-    <script src="/static/assets/js/django-datta-able/pages/google-maps.js"></script>
+    <script src="{% static 'assets/plugins/google-maps/js/gmaps.js"></script>
+    <script src="{% static 'assets/js/django-datta-able/pages/google-maps.js"></script>
 
 {% endblock javascripts %}
