--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends "layouts/django-material-kit/base.html" %}
 
 {% block title %} About US {% endblock %} 
@@ -12,7 +13,7 @@
   {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
   <header class="bg-gradient-dark">
-    <div class="page-header min-vh-75" style="background-image: url('/static/assets/img/django-material-kit/bg9.jpg');">
+    <div class="page-header min-vh-75" style="background-image: url('{% static 'assets/img/django-material-kit/bg9.jpg');">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row justify-content-center">
@@ -110,7 +111,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="/static/assets/img/django-material-kit/team-5.jpg" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/django-material-kit/team-5.jpg" alt="image">
                     </div>
                   </a>
                 </div>
@@ -130,7 +131,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="/static/assets/img/django-material-kit/bruce-mars.jpg" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/django-material-kit/bruce-mars.jpg" alt="image">
                     </div>
                   </a>
                 </div>
@@ -152,7 +153,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="/static/assets/img/django-material-kit/ivana-squares.jpg" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/django-material-kit/ivana-squares.jpg' %}" alt="image">
                     </div>
                   </a>
                 </div>
@@ -172,7 +173,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="/static/assets/img/django-material-kit/ivana-square.jpg" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/django-material-kit/ivana-square.jpg' %}" alt="image">
                     </div>
                   </a>
                 </div>
@@ -194,22 +195,22 @@
       <div class="container">
         <div class="row mb-7">
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="/static/assets/img/django-material-kit/logos/gray-logos/logo-coinbase.svg" alt="logo">
+            <img class="w-100 opacity-7" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-coinbase.svg' %}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="/static/assets/img/django-material-kit/logos/gray-logos/logo-nasa.svg" alt="logo">
+            <img class="w-100 opacity-7" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-nasa.svg' %}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="/static/assets/img/django-material-kit/logos/gray-logos/logo-netflix.svg" alt="logo">
+            <img class="w-100 opacity-7" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-netflix.svg' %}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="/static/assets/img/django-material-kit/logos/gray-logos/logo-pinterest.svg" alt="logo">
+            <img class="w-100 opacity-7" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-pinterest.svg' %}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="/static/assets/img/django-material-kit/logos/gray-logos/logo-spotify.svg" alt="logo">
+            <img class="w-100 opacity-7" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-spotify.svg' %}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="/static/assets/img/django-material-kit/logos/gray-logos/logo-vodafone.svg" alt="logo">
+            <img class="w-100 opacity-7" src="{% static 'assets/img/django-material-kit/logos/gray-logos/logo-vodafone.svg' %}" alt="logo">
           </div>
         </div>
         <div class="row justify-content-center text-center">
@@ -255,7 +256,7 @@
           </div>
           <div class="col-md-5 ms-auto">
             <div class="position-relative">
-              <img class="max-width-50 w-100 position-relative z-index-2" src="/static/assets/img/django-material-kit/macbook.png" alt="image">
+              <img class="max-width-50 w-100 position-relative z-index-2" src="{% static 'assets/img/django-material-kit/macbook.png' %}" alt="image">
             </div>
           </div>
         </div>
