--- a/frontend/templates/home/django-material-kit/ui-elements-avatars.html
+++ b/frontend/templates/home/django-material-kit/ui-elements-avatars.html
@@ -17,8 +17,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/django-material-kit/apple-icon.png">
-  <link rel="icon" type="image/png" href="/static/assets/img/django-material-kit/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/django-material-kit/apple-icon.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
 
   <title>
     Django Material Kit 2 - Avatars | AppSeed
@@ -91,16 +91,16 @@
     <div class="col-12">
       <div class="avatar-group">
         <a href="javascript:;" class="avatar avatar-lg rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
-          <img alt="Image placeholder" src="/static/assets/img/django-material-kit/team-1.jpg">
+          <img alt="Image placeholder" src="{% static 'assets/img/django-material-kit/team-1.jpg">
         </a>
         <a href="javascript:;" class="avatar avatar-lg rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-          <img alt="Image placeholder" src="/static/assets/img/django-material-kit/team-2.jpg">
+          <img alt="Image placeholder" src="{% static 'assets/img/django-material-kit/team-2.jpg">
         </a>
         <a href="javascript:;" class="avatar avatar-lg rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
-          <img alt="Image placeholder" src="/static/assets/img/django-material-kit/team-3.jpg">
+          <img alt="Image placeholder" src="{% static 'assets/img/django-material-kit/team-3.jpg">
         </a>
         <a href="javascript:;" class="avatar avatar-lg rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-          <img alt="Image placeholder" src="/static/assets/img/django-material-kit/team-4.jpg">
+          <img alt="Image placeholder" src="{% static 'assets/img/django-material-kit/team-4.jpg">
         </a>
       </div>
     </div>
@@ -124,16 +124,16 @@
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-12"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"avatar-group"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-lg rounded-circle"</span> <span class="na">data-bs-toggle=</span><span class="s">"tooltip"</span> <span class="na">data-bs-placement=</span><span class="s">"bottom"</span> <span class="na">title=</span><span class="s">"Ryan Tompson"</span><span class="nt">&gt;</span>
-          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"/static/assets/img/django-material-kit/team-1.jpg"</span><span class="nt">&gt;</span>
+          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/django-material-kit/team-1.jpg"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-lg rounded-circle"</span> <span class="na">data-bs-toggle=</span><span class="s">"tooltip"</span> <span class="na">data-bs-placement=</span><span class="s">"bottom"</span> <span class="na">title=</span><span class="s">"Romina Hadid"</span><span class="nt">&gt;</span>
-          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"/static/assets/img/team-2.jpg"</span><span class="nt">&gt;</span>
+          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-2.jpg"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-lg rounded-circle"</span> <span class="na">data-bs-toggle=</span><span class="s">"tooltip"</span> <span class="na">data-bs-placement=</span><span class="s">"bottom"</span> <span class="na">title=</span><span class="s">"Alexander Smith"</span><span class="nt">&gt;</span>
-          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"/static/assets/img/team-3.jpg"</span><span class="nt">&gt;</span>
+          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-3.jpg"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-lg rounded-circle"</span> <span class="na">data-bs-toggle=</span><span class="s">"tooltip"</span> <span class="na">data-bs-placement=</span><span class="s">"bottom"</span> <span class="na">title=</span><span class="s">"Jessica Doe"</span><span class="nt">&gt;</span>
-          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"/static/assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
+          <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;/a&gt;</span>
       <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
@@ -191,19 +191,19 @@
   <div class="row mt-5 text-center">
     <div class="col-12">
       <a href="javascript:;" class="avatar avatar-xs rounded-circle">
-        <img alt="Image placeholder" src="/static/assets/img/team-4.jpg">
+        <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg">
       </a>
       <a href="javascript:;" class="avatar avatar-sm rounded-circle">
-        <img alt="Image placeholder" src="/static/assets/img/team-4.jpg">
+        <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg">
       </a>
       <a href="javascript:;" class="avatar rounded-circle">
-        <img alt="Image placeholder" src="/static/assets/img/team-4.jpg">
+        <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg">
       </a>
       <a href="javascript:;" class="avatar avatar-lg rounded-circle">
-        <img alt="Image placeholder" src="/static/assets/img/team-4.jpg">
+        <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg">
       </a>
       <a href="javascript:;" class="avatar avatar-xl rounded-circle">
-        <img alt="Image placeholder" src="/static/assets/img/team-4.jpg">
+        <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg">
       </a>
     </div>
   </div>
@@ -218,19 +218,19 @@
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row mt-5 text-center"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"col-12"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-xs rounded-circle"</span><span class="nt">&gt;</span>
-        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"/static/assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
+        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;/a&gt;</span>
       <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-sm rounded-circle"</span><span class="nt">&gt;</span>
-        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"/static/assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
+        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;/a&gt;</span>
       <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar rounded-circle"</span><span class="nt">&gt;</span>
-        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"/static/assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
+        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;/a&gt;</span>
       <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-lg rounded-circle"</span><span class="nt">&gt;</span>
-        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"/static/assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
+        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;/a&gt;</span>
       <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:;"</span> <span class="na">class=</span><span class="s">"avatar avatar-xl rounded-circle"</span><span class="nt">&gt;</span>
-        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"/static/assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
+        <span class="nt">&lt;img</span> <span class="na">alt=</span><span class="s">"Image placeholder"</span> <span class="na">src=</span><span class="s">"{% static 'assets/img/team-4.jpg"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;/a&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;/div&gt;</span>
