--- a/frontend/templates/layouts/django-datta-able/base.html
+++ b/frontend/templates/layouts/django-datta-able/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,13 +23,13 @@
     <meta name="author" content="CodedThemes"/>
 
     <!-- Favicon icon -->
-    <link rel="icon" href="/static/assets/img/django-datta-able/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{% static 'assets/img/django-datta-able/favicon.ico' %}" type="image/x-icon">
     <!-- fontawesome icon -->
-    <link rel="stylesheet" href="/static/assets/fonts/fontawesome/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="{% static 'assets/fonts/fontawesome/css/fontawesome-all.min.css' %}">
     <!-- animation css -->
-    <link rel="stylesheet" href="/static/assets/plugins/animation/css/animate.min.css">
+    <link rel="stylesheet" href="{% static 'assets/plugins/animation/css/animate.min.css' %}">
     <!-- vendor css -->
-    <link rel="stylesheet" href="/static/assets/css/django-datta-able/style.css">
+    <link rel="stylesheet" href="{% static 'assets/css/django-datta-able/style.css' %}">
 
     <!-- Specific CSS goes HERE -->
     {% block stylesheets %}{% endblock stylesheets %}
