fixed src for django-material-kit staticfiles

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1024,26 +1024,26 @@
         <hr class="horizontal dark my-5">
         <div class="row">
           <div class="col-lg-2 col-md-4 col-6 ms-auto">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-apple.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logo-apple.svg' %}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-facebook.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logo-facebook.svg' %}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-nasa.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logo-nasa.svg' %}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 ms-lg-0 ms-md-auto">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-vodafone.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logo-vodafone.svg' %}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 me-md-auto mx-md-0 mx-auto">
-            <img class="w-100 opacity-6" src="{% static 'assets/img/logos/gray-logos/logo-digitalocean.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{% static 'assets/img/django-material-kit/logo-digitalocean.svg' %}" alt="Logo">
           </div>
         </div>
       </div>
     </section>
     <section class="py-sm-7" id="download-soft-ui">
       <div class="bg-gradient-dark position-relative m-3 border-radius-xl overflow-hidden">
-        <img src="{% static 'assets/img/shapes/waves-white.svg' %}" alt="pattern-lines" class="position-absolute start-0 top-md-0 w-100 opacity-2">
+        <img src="{% static 'assets/img/django-material-kit/waves-white.svg' %}" alt="pattern-lines" class="position-absolute start-0 top-md-0 w-100 opacity-2">
         <div class="container py-7 postion-relative z-index-2 position-relative">
           <div class="row">
             <div class="col-md-7 mx-auto text-center">
@@ -1153,7 +1153,7 @@
         <div class="col-md-3 mb-4 ms-auto">
           <div>
             <a href="https://appseed.us/product/django-material-kit">
-              <img src="{% static 'assets/img/logo-ct-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
+              <img src="{% static 'assets/img/django-material-kit/logo-ct-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
             </a>
             <h6 class="font-weight-bolder mb-4">Material Kit 2</h6>
           </div>
