--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -67,7 +67,7 @@
             <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuBlocks" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="material-icons opacity-6 me-2 text-md">view_day</i>
               Sections
-              <img src="{% static 'assets/img/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
+              <img src="{% static 'assets/img/django-material-kit/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
             </a>
             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
               <div class="d-none d-lg-block">
@@ -78,7 +78,7 @@
                         <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Page Sections</h6>
                         <span class="text-sm">See all sections</span>
                       </div>
-                      <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                      <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -97,7 +97,7 @@
                         <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Navigation</h6>
                         <span class="text-sm">See all navigations</span>
                       </div>
-                      <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                      <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -119,7 +119,7 @@
                         <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Input Areas</h6>
                         <span class="text-sm">See all input areas</span>
                       </div>
-                      <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                      <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -138,7 +138,7 @@
                         <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Attention Catchers</h6>
                         <span class="text-sm">See all examples</span>
                       </div>
-                      <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                      <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -160,7 +160,7 @@
                         <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Elements</h6>
                         <span class="text-sm">See all elements</span>
                       </div>
-                      <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                      <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                     </div>
                   </a>
                   <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -305,7 +305,7 @@
             <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuDocs" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="material-icons opacity-6 me-2 text-md">article</i>
               Help
-              <img src="{% static 'assets/img/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
+              <img src="{% static 'assets/img/django-material-kit/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
             </a>
             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive mt-0 mt-lg-3 p-3 border-radius-lg" aria-labelledby="dropdownMenuDocs">
               <div class="d-none d-lg-block">
