--- a/frontend/static/assets/css/django-datta-able/style.css
+++ b/frontend/static/assets/css/django-datta-able/style.css
@@ -50,10 +50,10 @@ File: style.css
      Google Font
 ==========================  **/
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600");
-@import url("../plugins/bootstrap/css/bootstrap.min.css");
-@import url("../fonts/feather/css/feather.css");
-@import url("../plugins/jquery-scrollbar/css/jquery.scrollbar.min.css");
-@import url("../fonts/datta/datta-icon.css");
+@import url("/static/plugins/bootstrap/css/bootstrap.min.css");
+@import url("/static/fonts/feather/css/feather.css");
+@import url("/static/plugins/jquery-scrollbar/css/jquery.scrollbar.min.css");
+@import url("/static/fonts/datta/datta-icon.css");
 /**  =====================
       Custom css start
 ==========================  **/
