--- a/frontend/templates/layouts/django-datta-able/base.html
+++ b/frontend/templates/layouts/django-datta-able/base.html
@@ -29,6 +29,10 @@
     <!-- animation css -->
     <link rel="stylesheet" href="{% static 'assets/plugins/animation/css/animate.min.css' %}">
     <!-- vendor css -->
+    <link rel="stylesheet" href="{% static 'plugins/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'fonts/feather/css/feather.css' %}">
+    <link rel="stylesheet" href="{% static 'plugins/jquery-scrollbar/css/jquery.scrollbar.min.css' %}">
+    <link rel="stylesheet" href="{% static 'fonts/datta/datta-icon.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/django-datta-able/style.css' %}">
 
     <!-- Specific CSS goes HERE -->
