updated template urls for dashboard in frontend

--- a/frontend/templates/home/django-datta-able/login.html
+++ b/frontend/templates/home/django-datta-able/login.html
@@ -49,7 +49,7 @@
 
                     </form>
 
-                    <p class="mb-0 text-muted">Don’t have an account? <a href="/register.html" >Signup</a></p>
+                    <p class="mb-0 text-muted">Don’t have an account? <a href="/dashboard/register.html" >Signup</a></p>
                     <br />
                     <p class="mb-2 text-muted">
                         &copy; <a target="_blank" href="https://bit.ly/37fF9RT">CodedThemes</a> 
