--- a/frontend/templates/home/django-datta-able/page-404.html
+++ b/frontend/templates/home/django-datta-able/page-404.html
@@ -23,7 +23,7 @@
                     <br />
 
                     <span class="mb-0 text-muted">
-                        Page not found - <a href="/">Home</a> 
+                        Page not found - <a href="/dashboard/">Home</a>
                     </span>
 
                 </div>
