--- a/frontend/templates/home/django-datta-able/page-500.html
+++ b/frontend/templates/home/django-datta-able/page-500.html
@@ -23,7 +23,7 @@
                     <br />
 
                     <span class="mb-0 text-muted">
-                        Server Error - <a href="/">Home</a> 
+                        Server Error - <a href="/dashboard/">Home</a>
                     </span>
 
                 </div>
