--- a/frontend/templates/home/django-datta-able/register.html
+++ b/frontend/templates/home/django-datta-able/register.html
@@ -54,7 +54,7 @@
 
                     </form>
                     
-                    <p class="mb-0 text-muted">Already have an account? <a href="/login.html" >Login</a></p>
+                    <p class="mb-0 text-muted">Already have an account? <a href="/dashboard/login.html" >Login</a></p>
                     <br />
 
                     <p class="mb-2 text-muted">
