--- a/frontend/templates/home/django-datta-able/ui-tables.html
+++ b/frontend/templates/home/django-datta-able/ui-tables.html
@@ -19,7 +19,7 @@
                             <h5 class="m-b-10">Bootstrap Basic Tables</h5>
                         </div>
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html"><i class="feather icon-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="dashboard/index.html"><i class="feather icon-home"></i></a></li>
                             <li class="breadcrumb-item"><a href="#!">Tables</a></li>
                             <li class="breadcrumb-item"><a href="javascript:">Basic Tables</a></li>
                         </ul>
