--- a/frontend/templates/account/django-datta-able/register.html
+++ b/frontend/templates/account/django-datta-able/register.html
@@ -65,7 +65,7 @@
 
                     </form>
 
-                    <p class="mb-0 text-muted">Already have an account? <a href="{% url 'login' %}" >Login</a></p>
+                    <p class="mb-0 text-muted">Already have an account? <a href="{% url 'dashboard_login' %}" >Login</a></p>
                     <br />
                     <p class="mb-2 text-muted">
                         &copy; <a target="_blank" href="https://bit.ly/37fF9RT">CodedThemes</a> 
