--- a/frontend/templates/home/django-datta-able/charts-morris.html
+++ b/frontend/templates/home/django-datta-able/charts-morris.html
@@ -23,7 +23,7 @@
                             <h5 class="m-b-10">Morris Chart</h5>
                         </div>
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/"><i class="feather icon-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="/dashboard/"><i class="feather icon-home"></i></a></li>
                             <li class="breadcrumb-item"><a href="javascript:">Chart</a></li>
                             <li class="breadcrumb-item"><a href="javascript:">Morris Chart</a></li>
                         </ul>
