--- a/frontend/templates/home/django-datta-able/ui-icons.html
+++ b/frontend/templates/home/django-datta-able/ui-icons.html
@@ -19,7 +19,7 @@
                                 <h5 class="m-b-10">feather</h5>
                             </div>
                             <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="/"><i class="feather icon-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href="/dashboard/"><i class="feather icon-home"></i></a></li>
                                 <li class="breadcrumb-item"><a href="javascript:">Icons</a></li>
                                 <li class="breadcrumb-item"><a href="javascript:">Feather icon</a></li>
                             </ul>
