--- a/frontend/templates/home/django-datta-able/ui-tabs.html
+++ b/frontend/templates/home/django-datta-able/ui-tabs.html
@@ -19,7 +19,7 @@
                                         <h5 class="m-b-10">Navs & tabs</h5>
                                     </div>
                                     <ul class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="/"><i class="feather icon-home"></i></a></li>
+                                        <li class="breadcrumb-item"><a href="/dashboard/"><i class="feather icon-home"></i></a></li>
                                         <li class="breadcrumb-item"><a href="javascript:">Basic Componants</a></li>
                                         <li class="breadcrumb-item"><a href="javascript:">Navs & tabs</a></li>
                                     </ul>
